HREPTWO-16: Use more efficient Boolean.valueOf instead of new Boolean
svn path=/hippo-ecm/trunk/; revision=21282